<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yale</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string-array name="menu_names">
        <item>News</item>
        <item>Directory</item>
        <item>Maps</item>
        <item>Videos</item>
        <item>Photos</item>
        <item>Events</item>
        <item>Transit</item>
        <item>Athletics</item>
        <item>Arts Events</item>
    </string-array>
    <string-array name="news_feeds">
        <item>http://news.yale.edu/news-rss</item>
        <item>http://news.yale.edu/topics/arts-humanities/rss</item>
        <item>http://news.yale.edu/topics/business-law-society/rss</item>
        <item>http://news.yale.edu/topics/campus-community/rss</item>
        <item>http://news.yale.edu/topics/science-health/rss</item>
        <item>http://news.yale.edu/topics/world-environment/rss</item>
    </string-array>
    <string-array name="news_names">
        <item>All Topics</item>
        <item>Arts and Humanities</item>
        <item>Business, Law, Society</item>
        <item>Campus and Community</item>
        <item>Science and Health</item>
        <item>World and Environment</item>
    </string-array>
    <string-array name="men_sports_keywords">
        <item>m-basebl</item>
        <item>m-baskbl</item>
        <item>m-crewhvy</item>
        <item>m-crewlt</item>
        <item>m-xc</item>
        <item>m-fenc</item>
        <item>m-footbl</item>
        <item>m-golf</item>
        <item>m-hockey</item>
        <item>m-lacros</item>
        <item>c-sail</item>
        <item>m-soccer</item>
        <item>m-squash</item>
        <item>m-swim</item>
        <item>m-tennis</item>
        <item>m-track</item>
    </string-array>
    <string-array name="men_sports">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Heavyweight Crew</item>
        <item>Lightweight Crew</item>
        <item>Cross Country</item>
        <item>Fencing</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Hockey</item>
        <item>Lacrosse</item>
        <item>Sailing</item>
        <item>Soccer</item>
        <item>Squash</item>
        <item>Swimming</item>
        <item>Tennis</item>
        <item>Track &amp; Field</item>
    </string-array>
    <string-array name="women_sports_keywords">
        <item>w-baskbl</item>
        <item>w-crew</item>
        <item>w-xc</item>
        <item>w-fenc</item>
        <item>w-fieldh</item>
        <item>w-golf</item>
        <item>w-gym</item>
        <item>w-hockey</item>
        <item>w-lacros</item>
        <item>w-sail</item>
        <item>w-soccer</item>
        <item>w-softbl</item>
        <item>w-squash</item>
        <item>w-swim</item>
        <item>w-tennis</item>
        <item>w-track</item>
        <item>w-volley</item>
    </string-array>
    <string-array name="women_sports">
        <item>Basketball</item>
        <item>Crew</item>
        <item>Cross Country</item>
        <item>Fencing</item>
        <item>Field Hockey</item>
        <item>Golf</item>
        <item>Gymnastics</item>
        <item>Hockey</item>
        <item>Lacrosse</item>
        <item>Sailing</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Squash</item>
        <item>Swimming</item>
        <item>Tennis</item>
        <item>Track &amp; Field</item>
        <item>Volleyball</item>
    </string-array>
    <string-array name="events_category_names">
        <item>All</item>
        <item>Classes &amp; Workshops</item>
        <item>Community</item>
        <item>Conference</item>
        <item>Exhibitions</item>
        <item>Family Friendly</item>
        <item>Films</item>
        <item>Group Meetings</item>
        <item>Performances</item>
        <item>Spiritual &amp; Worship</item>
        <item>Sports &amp; Recreation</item>
        <item>Talks &amp; Readings</item>
        <item>Tours</item>
    </string-array>
    <string-array name="events_category_names_json">
        <item>PlaceHolderForAll</item>
        <item>class workshop</item>
        <item>community</item>
        <item>conference</item>
        <item>exhibition</item>
        <item>family</item>
        <item>film</item>
        <item>group_meeting</item>
        <item>performance</item>
        <item>spiritual</item>
        <item>sports recreation</item>
        <item>talk reading</item>
        <item>tour</item>
    </string-array>

    <string name="calendar_cache_progress">Obsolete data detected. Downloading newest information from Yale servers.
        \n\nThis might take a moment, please wait…</string>

    <string name="title_activity_video_list">VideoList</string>
    <string name="title_activity_videos_within_list">VideosInPlaylist</string>
    <string name="title_activity_video_playback">VideoPlayback</string>
    <string name="photos_in_album">Photos in Album</string>
    <string name="title_activity_image">Image</string>
    <string name="currentphoto">currentphoto</string>
    <string name="title_activity_photo_list">PhotoList</string>
    <string name="title_activity_event_categories">EventCategories</string>
    <string name="title_activity_events_display">EventsDisplay</string>
    <string name="title_activity_events_search">Results</string>
    <string name="title_activity_events_details">Details</string>
    <string name="current_version">release 2.0</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="more_info">More Info</string>
    <string name="authors">Authors: \nJason Liu\nStanislaw Swidwinski\nCarsten Peterson\nAbhishek Chandra\nJessica Yang</string>
    <string name="news">News</string>
    <string name="directory">Directory</string>
    <string name="maps">Maps</string>
    <string name="licenses">Licenses</string>
    <string name="videos">Videos</string>
    <string name="videos_playlists">Available playlists</string>
    <string name="photos">Photos</string>
    <string name="events">Events</string>
    <string name="events_search">Search for event by name</string>
    <string name="events_search_not_found">We have found no events matching your query.\n\n Please try again!</string>
    <string name="transit">Transit</string>
    <string name="athletics">Athletics</string>
    <string name="arts_events">Arts Events</string>
    <string name="commencement">Commencement</string>
    <string name="placeholder">placeholder</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="starts">starts</string>
    <string name="ends">ends</string>
    <string name="description">description</string>
    <string name="location">location</string>
    <string name="rss_reader">RSS Reader</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="yale">Yale University</string>
    <string name="description_lower">description</string>
    <string name="building_search">Search for a building</string>
    <string name="splashstring">Splash Text</string>
    <string name="title_activity_athletics">AthleticsActivity</string>
    <string name="top_stories_url">http://www.yalebulldogs.com/landing/headlines-featured?feed=rss_2.0</string>
    <string name="baseURL">http://www.yalebulldogs.com/sports/</string>
    <string name="headlinesExt">/headlines-featured?feed=rss_2.0</string>
    <string name="eventsExt">/composite?print=rss</string>

</resources>
