<?xml version="1.0" encoding="utf-8"?>

<!-- Created by Jason Liu on 10/12/14.
      This layout is used as a subset of rss_tab.xml. Many of these are added to the
      ListView in rss_tab.xml it has 3 fields which are the title, date, and description
      of the RSS content that is downloaded.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:id="@+id/tvTitle"
        android:textStyle="bold"
        android:text="@string/title"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:id="@+id/tvDate"
        android:text="@string/date"
        android:textColor="#0071c5"
        android:layout_below="@+id/tvTitle"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:id="@+id/tvDescription"
        android:text="@string/description"
        android:layout_below="@+id/tvDate"/>
</RelativeLayout>