<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Jason Liu
    Layout contains a static "about" page.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/yale"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_version"
        android:id="@+id/tvRelease"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="3">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibFeedback"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/info_button_feedback"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibShare"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/info_button_share"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibMoreInfo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/info_button_more"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/feedback"
            android:id="@+id/tvFeedback"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/share"
            android:id="@+id/tvShare"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/more_info"
            android:id="@+id/tvMoreInfo"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/authors"
        android:id="@+id/tvCredits"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp"
        android:gravity="center"/>
</LinearLayout>
