<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Stan Swidwinski
   Layout for the details screen of an events. Displayed after clicking specific event in
   any of the tabs in the calendar functionality. Data displayed taken from cache or pulled from
   internet.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededef">

    <LinearLayout
        android:id="@+id/events_details_title"
        android:orientation="horizontal"
        android:background="#eeeef0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/events_details_title_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/imageViewInList"/>

        <TextView
            android:id="@+id/events_details_title_text"
            android:layout_gravity="center_vertical"
            android:text="@string/placeholder"
            android:gravity="center"
            android:background="#ededef"
            style="@style/textViewInListBig"/>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:src="@drawable/separator_calendar_events_list"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ebebec">

        <LinearLayout
            android:id="@+id/event_details_information"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ebebec">

            <LinearLayout
                android:id="@+id/event_details_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:layout_marginBottom="2dp"
                android:background="#dbdbdd"
                android:weightSum="4">

                <TextView
                    android:id="@+id/events_details_start_static"
                    android:layout_width="fill_parent"
                    android:text="@string/starts"
                    android:textColor="#4c80bb"
                    android:layout_weight="3"
                    style="@style/textViewInListNormal"/>

                <TextView
                    android:id="@+id/events_details_start_time"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/placeholder"
                    android:textColor="#3e3f44"
                    android:layout_weight="1"
                    style="@style/textViewInListNormal"/>
                </LinearLayout>

            <LinearLayout
                android:id="@+id/event_details_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:background="#dbdbdd"
                android:weightSum="4"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/event_details_end_static"
                    android:layout_width="fill_parent"
                    android:text="@string/ends"
                    android:textColor="#4c80bb"
                    android:layout_weight="3"
                    style="@style/textViewInListNormal"/>

                <TextView
                    android:id="@+id/event_details_end_time"
                    android:layout_width="fill_parent"
                    android:text="@string/placeholder"
                    android:textColor="#3e3f44"
                    android:layout_weight="1"
                    style="@style/textViewInListNormal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#dbdbdd"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:weightSum="4"
                android:layout_marginBottom="2dp">

                <TextView
                    android:id="@+id/event_details_description_static"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/description"
                    android:textColor="#4c80bb"
                    android:layout_weight="3"
                    style="@style/textViewInListNormal" />

                <TextView
                    android:id="@+id/event_details_description_text"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/placeholder"
                    android:textColor="#3e3f44"
                    android:layout_weight="1"
                    style="@style/textViewInListNormal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_details_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#dbdbdd"
                android:weightSum="4">

                <TextView
                    android:id="@+id/event_details_description_location_static"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/location"
                    android:textColor="#4c80bb"
                    android:layout_weight="3"
                    style="@style/textViewInListNormal"/>

                <TextView
                    android:id="@+id/event_details_location_text"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/placeholder"
                    android:textColor="#3e3f44"
                    android:layout_weight="1"
                    style="@style/textViewInListNormal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>